# src/routes/user.routes.ts
@@ -4,7 +4,8 @@ import { GetAllUsersController } from "../modules/users/useCases/getAllUsers/Get
 import { GetUserByIdController } from "../modules/users/useCases/getUserById/GetUserByIdController";
 import { PutUserController } from "../modules/users/useCases/putUser/PutUserController";
 import { DeleteUserController } from "../modules/users/useCases/deleteUser/deleteUserController";
-import { CreatePasswordController } from "../modules/users/useCases/createPassword/createPasswordController";
+import { CreatePasswordController } from "../modules/users/useCases/createPassword/CreatePasswordController";
+import { authenticate } from "../middleware/authenticate";
 
 const createUserController = new CreateUserController();
 const getAllUsersController = new GetAllUsersController();
@@ -14,11 +15,11 @@ const deleteUserController = new DeleteUserController();
 const createPasswordController = new CreatePasswordController();
 const userRoutes = Router();
 
-userRoutes.post("/", createUserController.handle);
+userRoutes.post("/", authenticate, createUserController.handle);
 userRoutes.get("/", getAllUsersController.handle);
-userRoutes.get("/:id", getUserByIdController.handle);
-userRoutes.put("/:id", putUserController.handle);
-userRoutes.delete("/:id", deleteUserController.handle);
+userRoutes.get("/:id", authenticate, getUserByIdController.handle);
+userRoutes.put("/:id", authenticate, putUserController.handle);
+userRoutes.delete("/:id", authenticate, deleteUserController.handle);
 userRoutes.put("/:id/createPassword", createPasswordController.handle);
 
 export { userRoutes };
